# zero

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  terminal.rs  userspace.rs  userspace_test.rs  vg_buffer.rs
src/arch/x86_64/: cpu.rs  gdt.rs  interrupts.rs  mod.rs  syscall.rs
src/drivers/: keyboard.rs  mod.rs  mouse.rs  serial.rs  vg_buffer.rs
src/fs/: mod.rs
src/kernel/: mod.rs  userspace.rs
src/syscall/: handlers.rs  mod.rs
src/task/: simple_executor.rs
src/ui/: input.rs  shell.rs  terminal.rs
src/userspace/: syscall.rs
sysroot/usr/local/include/: mlibc-config.h
sysroot/usr/local/include/zero/: syscall.h
tests/: heap_allocation.rs
